# vllm-lgtm-ops

./: .gitignore  Module 1 Infrastructure.txt  README.md  docker-compose.gpu.yml  docker-compose.yml  dockerfile  entrypoint.sh  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt  start_stack.sh  stop_stack.sh
grafana/provisioning/dashboards/: dashboard_provisioning.yml  llmops_dashboard.json
native_deploy/: loki-local.yml  prometheus-local.yml  promtail-local.yml
src/: engine_sim.py  gateway.py  warmup.py  worker.py
src/api/v1/: chat.py
src/core/: config.py  models.py  security.py
src/metrics/: custom_metrics.py
src/services/: rate_limiter.py  token_service.py
