[project]
name = "vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "redis==5.0.3",
    "tokenizers==0.15.2",
    "transformers==4.38.2",
    "uvicorn==0.27.1",
]
